# template_project

./: .gitignore  CMakeLists.txt
launcher/: CMakeLists.txt  main.cpp
libA/: CMakeLists.txt  liba.cpp  liba.h
libB/: CMakeLists.txt  libb.cpp  libb.h
tests/: CMakeLists.txt  liba_test.cpp  libb_test.cpp  test.cpp
